tests/errors/invalid_assignment.ne
function main(): int32
{
    var notString: int64;
    notString = "String";
    return 0;
}
